--- a/public/packs/manifest.json
+++ b/public/packs/manifest.json
@@ -10,6 +10,22 @@
         "/packs/js/application-4e1e5670704d656e920d.js.map"
       ]
     },
+    "home": {
+      "js": [
+        "/packs/js/home-e44339787cb7a6c89de1.js"
+      ],
+      "js.map": [
+        "/packs/js/home-e44339787cb7a6c89de1.js.map"
+      ]
+    },
+    "registrations": {
+      "js": [
+        "/packs/js/registrations-c534f0a75ecc9d6296b7.js"
+      ],
+      "js.map": [
+        "/packs/js/registrations-c534f0a75ecc9d6296b7.js.map"
+      ]
+    },
     "sessions": {
       "js": [
         "/packs/js/sessions-b407a5a03e14eba23e06.js"
@@ -19,6 +35,10 @@
       ]
     }
   },
+  "home.js": "/packs/js/home-e44339787cb7a6c89de1.js",
+  "home.js.map": "/packs/js/home-e44339787cb7a6c89de1.js.map",
+  "registrations.js": "/packs/js/registrations-c534f0a75ecc9d6296b7.js",
+  "registrations.js.map": "/packs/js/registrations-c534f0a75ecc9d6296b7.js.map",
   "sessions.js": "/packs/js/sessions-b407a5a03e14eba23e06.js",
   "sessions.js.map": "/packs/js/sessions-b407a5a03e14eba23e06.js.map"
 }
