--- a/package.json
+++ b/package.json
@@ -4,12 +4,7 @@
   "dependencies": {
     "@rails/actioncable": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "4.2.2",
-    "modernizr": "^3.9.1",
-    "jquery": "^3.4.1",
-    "popper.js": "^1.16.1",
-    "bootstrap": "^4.4.1",
-    "turbolinks": "^5.2.0"
+    "@rails/webpacker": "4.2.2"
   },
   "version": "0.1.0",
   "devDependencies": {
